// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInputField component should render snapshot successfully with Email label 1`] = `
<DocumentFragment>
  <div
    class="inputGroup"
  >
    <label
      class="inputGroupLabel"
      for="email"
    >
      Email
    </label>
    <input
      class="inputGroupInput"
      id="email"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`FormInputField component should render snapshot successfully with First name label 1`] = `
<DocumentFragment>
  <div
    class="inputGroup"
  >
    <label
      class="inputGroupLabel"
      for="firstName"
    >
      First name
    </label>
    <input
      class="inputGroupInput"
      id="firstName"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`FormInputField component should render snapshot successfully with Last name label 1`] = `
<DocumentFragment>
  <div
    class="inputGroup"
  >
    <label
      class="inputGroupLabel"
      for="lastName"
    >
      Last name
    </label>
    <input
      class="inputGroupInput"
      id="lastName"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`FormInputField component should render snapshot successfully with Password label 1`] = `
<DocumentFragment>
  <div
    class="inputGroup"
  >
    <label
      class="inputGroupLabel"
      for="password"
    >
      Password
    </label>
    <input
      class="inputGroupInput"
      id="password"
      type="password"
      value=""
    />
  </div>
</DocumentFragment>
`;
